...
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bg_glass_panel"
            android:padding="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerChats"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

...
